@@ -724,7 +724,7 @@ for the original NTP specification, once called NTP Version 0.
 <H4>
 Traffic Monitoring</H4>
 <TT>ntpd</TT> handles peers whose stratum is higher than the stratum of
-the local server and pollers using client mode by a fast path which
+the local server and polls using client mode by a fast path which
 minimizes
 the work done in responding to their polls, and normally retains no
 memory
